# ENIGMA

./: LICENSE  PHASE2-IMPLEMENTATION-PLAN.md  PLAN.md  README.md  SETUP.md  backup-plan.txt  changes.md
backend/: .env.example  .gitignore  ARCHITECTURE.md  BACKEND.md  MIGRATION_SUMMARY.md  PLAN-BiasMonitoring.md  PLAN-Interview-v2.md  PLAN-Interview.md  README.md  README_POSTGRES.md  alembic.ini  api.py  create_admin.py  main.py  pyproject.toml  requirements.txt  test_connection.py  verify_all_routes.py  verify_modular_api.py
backend/alembic/: README  env.py
backend/batch_exports/: batch_export_CYC_20251013_143536_20251013_143933.jsonl  batch_export_CYC_20251013_150348_20251013_150739.jsonl  batch_export_CYC_20251013_151802_20251013_152142.jsonl  batch_export_CYC_20251013_162851_20251013_163247.jsonl  batch_export_CYC_20251013_171912_20251013_172237.jsonl  batch_export_CYC_20251013_180709_20251013_183047.jsonl  batch_export_CYC_20251015_175930_20251015_180229.jsonl  batch_export_CYC_20251015_193520_20251015_193914.jsonl  batch_export_CYC_20251016_185818_20251016_190942.jsonl  batch_export_CYC_20251017_102745_20251017_103419.jsonl  batch_export_CYC_20251018_152358_20251018_153404.jsonl  batch_export_CYC_20251019_101027_20251019_102516.jsonl  batch_export_CYC_20251019_110649_20251019_125303.jsonl  batch_export_CYC_20251020_170727_20251020_171532.jsonl  batch_export_CYC_20251020_172959_20251020_173357.jsonl  batch_export_CYC_20251020_174930_20251020_175407.jsonl  batch_export_CYC_20251020_182315_20251020_182801.jsonl  (+11 more)
backend/prompts/: judge_prompt.txt  rubric.json  (+1 more)
(+127 files in other folders)
