[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
"python-dotenv==1.0.0",
"pydantic==2.5.3",
"pydantic-settings==2.1.0",
"fastapi==0.109.0",
"uvicorn==0.27.0",
"openai==1.12.0",
"langchain==0.1.0",
"langgraph==0.0.20",
"pandas==2.1.4",
"spacy==3.7.2",
"python-dateutil==2.8.2",
"pytz==2023.3",
"pytest==7.4.3",
"pytest-asyncio==0.21.1",
"pytest-mock==3.12.0",
"mypy==1.7.1",
"types-python-dateutil==2.8.19"
]
