[project]
name = "backend"
version = "2.0.0"
description = "ENIGMA Phase 1 Backend - AI-powered blind admissions system with PostgreSQL"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "openai>=1.12.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "spacy>=3.7.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "cryptography>=41.0.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "types-python-dateutil>=2.8.0",
    "pydub"
]
